discovery.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-service
  labels:
    run: discovery-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discovery-service
  template:
    metadata:
      labels:
        app: discovery-service
    spec:
      containers:
      - name: discovery-service
        image: archerfrank/discovery-service:1.0
        ports:
        - containerPort: 8761
          protocol: TCP
