account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-service
spec:
  ports:
  - port: 8091
    targetPort: 8091
  selector:
    app: account-service
