nodeport-customer.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  type: NodePort
  ports:
  - port: 8092
    targetPort: 8092
    nodePort: 32001
  selector:
    app: customer-service
