nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: discovery-service
spec:
  type: NodePort
  ports:
  - port: 8761
    targetPort: 8761
    nodePort: 32000
  selector:
    app: discovery-service
