gateway.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: 192.168.99.100
    http:
      paths:
      - path: /customer
        backend:
          serviceName: customer-service
          servicePort: 8092
